--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "request-promise",
   "version": "0.0.1",
-  "description": "Promise-based Wrapper for Request using Bluebird",
+  "description": "Promise-based Wrapper for XHR using Request and Bluebird",
   "main": "lib/tp.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "To Do"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tyabonil/request-promise"
   },
   "keywords": [
     "xhr",
