Up dependencies versions

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "author": "Ty Abonil",
   "license": "MIT",
   "dependencies": {
-    "bluebird": "~0.7.9-1",
-    "request": "~2.27.0"
+    "bluebird": "~1.0.1",
+    "request": "~2.33.0"
   }
 }
