--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "dependencies": {
     "bluebird": "^2.3",
+    "lodash": "^2.4.1",
     "request": "^2.34"
   },
   "devDependencies": {
