--- a/package.json
+++ b/package.json
@@ -1,26 +1,33 @@
 {
   "name": "request-promise",
   "version": "0.2.5",
-  "description": "Promise-based Wrapper for XHR using Request and Bluebird",
+  "description": "The world-famous HTTP client 'Request' now Promises/A+ compliant. Powered by Bluebird.",
+  "keywords": [
+    "xhr",
+    "http",
+    "https",
+    "promise",
+    "request",
+    "then",
+    "thenable"
+  ],
+  "homepage": "https://github.com/tyabonil/request-promise",
+  "bugs": {
+    "url": "https://github.com/tyabonil/request-promise/issues"
+  },
+  "license": "MIT",
+  "author": "Ty Abonil",
+  "contributors": [
+    "Nicolai Kamenzky (https://github.com/analog-nico)"
+  ],
   "main": "./lib/rp.js",
-  "engines": {
-    "node": ">=0.10.0"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tyabonil/request-promise.git"
   },
   "scripts": {
     "test": "./node_modules/.bin/gulp validate"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/tyabonil/request-promise"
-  },
-  "keywords": [
-    "xhr",
-    "promise",
-    "request"
-  ],
-  "readmeFilename": "README.md",
-  "author": "Ty Abonil",
-  "license": "MIT",
   "dependencies": {
     "bluebird": "^2.3",
     "lodash": "^2.4.1",
@@ -35,5 +42,8 @@
     "jshint-stylish": "^1.0.0",
     "rimraf": "^2.2.8",
     "run-sequence": "^1.0.1"
+  },
+  "engines": {
+    "node": ">=0.10.0"
   }
 }
