--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "request": "^2.34"
   },
   "devDependencies": {
+    "chai": "^1.9.2",
     "chalk": "^0.5.1",
     "gulp": "^3.8.8",
     "gulp-istanbul": "^0.3.1",
