--- a/.jshintrc
+++ b/.jshintrc
@@ -80,14 +80,15 @@
   "rhino"         : false,    // Enable globals available when your code is running inside of the Rhino runtime environment.
   "wsh"           : false,    // Enable globals available when your code is running as a script for the Windows Script Host.
 
-  // Additional globals introduced by Mocha
+  // Additional globals introduced by Mocha and Chai
   "globals": {
     "describe"    : false,
     "xdescribe"   : false,
     "it"          : false,
     "xit"         : false,
     "before"      : false,
-    "after"       : false
+    "after"       : false,
+    "expect"      : false
   },
 
   // == JSLint Legacy ===================================================
