Copied tests from main branch (still failing)

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "request": "^2.34"
   },
   "devDependencies": {
+    "chai": "^1.9.2",
+    "chai-as-promised": "^4.1.1",
     "chalk": "^0.5.1",
     "gulp": "^3.8.8",
     "gulp-istanbul": "^0.3.1",
