--- a/.jshintrc
+++ b/.jshintrc
@@ -87,7 +87,9 @@
     "it"          : false,
     "xit"         : false,
     "before"      : false,
+    "beforeEach"  : false,
     "after"       : false,
+    "afterEach"   : false,
     "expect"      : false
   },
 
