--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,11 @@ node_js:
   - "0.11"
 
 env:
-  - V_REQUEST=2.34.0
-  - V_REQUEST=latest
+  - V_REQUEST=2.34.0 V_BLUEBIRD=2.3.0
+  - V_REQUEST=latest V_BLUEBIRD=latest
 
 before_script:
   - rm -rf ./node_modules/request/
+  - rm -rf ./node_modules/bluebird/
   - npm install request@$V_REQUEST
+  - npm install request@$V_BLUEBIRD
