Updated .gitignore, added .npmignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,5 @@
-.idea
-
-coverage
-lib-cov
-*.seed
-*.log
-*.csv
-*.dat
-*.out
-*.pid
-*.gz
-
-pids
-logs
-results
-
+.DS_Store
+.idea/
+coverage/
+node_modules/
 npm-debug.log
-node_modules
-
-test.js
