--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "request": "^2.34"
   },
   "devDependencies": {
+    "body-parser": "^1.12.0",
     "chai": "^1.10.0",
     "chai-as-promised": "^4.1.1",
     "event-stream": "^3.1.7",
