--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   },
   "dependencies": {
     "bluebird": "^2.3",
-    "chalk": "^0.5.1",
-    "lodash": "^2.4.1",
+    "chalk": "1.0.x",
+    "lodash": "3.6.x",
     "request": "^2.34"
   },
   "devDependencies": {
