--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   },
   "dependencies": {
     "bluebird": "^2.3",
-    "chalk": "1.0.x",
-    "lodash": "^3.6.0",
+    "chalk": "^1.1.0",
+    "lodash": "^3.10.0",
     "request": "^2.34"
   },
   "devDependencies": {
