--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ sudo: false
 
 node_js:
   - "0.10"
-  - "0.11"
   - "0.12"
-  - iojs
+  - "iojs"
+  - "4"
 
 env:
   - V_REQUEST=2.34.0 V_BLUEBIRD=2.3.0
