--- a/package.json
+++ b/package.json
@@ -34,22 +34,22 @@
     "request": "^2.34"
   },
   "devDependencies": {
-    "body-parser": "1.14.x",
-    "chai": "3.4.x",
-    "chai-as-promised": "5.1.x",
-    "chalk": "^1.1.1",
-    "cheerio": "^0.19.0",
+    "body-parser": "1.15.x",
+    "chai": "3.5.x",
+    "chai-as-promised": "5.2.x",
+    "chalk": "1.1.x",
+    "cheerio": "0.20.x",
     "cls-bluebird": "^1.0.1",
     "continuation-local-storage": "^3.1.4",
     "event-stream": "3.3.x",
     "gulp": "3.9.x",
     "gulp-coveralls": "0.1.x",
     "gulp-istanbul": "0.10.x",
-    "gulp-jshint": "1.12.x",
+    "gulp-jshint": "2.0.x",
     "gulp-mocha": "2.2.x",
-    "jshint": "2.8.0",
+    "jshint": "2.9.x",
     "jshint-stylish": "2.1.x",
-    "rimraf": "2.4.x",
+    "rimraf": "2.5.x",
     "run-sequence": "1.1.x"
   },
   "engines": {
