--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "bluebird": "^3.3",
     "lodash": "^4.6.1",
-    "request": "^2.34"
+    "request": "git://github.com/practo/request.git#v2.69.1-practo"
   },
   "devDependencies": {
     "body-parser": "1.15.x",
