--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   "dependencies": {
     "bluebird": "^3.3",
     "lodash": "^4.6.1",
+    "memory-cache": "^0.1.5",
+    "q": "^1.4.1",
     "request": "^2.34"
   },
   "devDependencies": {
@@ -50,7 +52,8 @@
     "jshint": "2.9.x",
     "jshint-stylish": "2.1.x",
     "rimraf": "2.5.x",
-    "run-sequence": "1.1.x"
+    "run-sequence": "1.1.x",
+    "moment": "^2.13.0"
   },
   "engines": {
     "node": ">=0.10.0"
