Move dependency to request into peerDependencies

--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
   },
   "dependencies": {
     "bluebird": "^3.3",
-    "lodash": "^4.6.1",
-    "request": "^2.34"
+    "lodash": "^4.6.1"
+  },
+  "peerDependencies": {
+    "request": "*"
   },
   "devDependencies": {
     "body-parser": "1.15.x",
