--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "request-promise",
   "version": "3.0.0",
-  "description": "The world-famous HTTP client 'Request' now Promises/A+ compliant. Powered by Bluebird.",
+  "description": "The simplified HTTP request client 'request' with Promise support. Powered by Bluebird.",
   "keywords": [
     "xhr",
     "http",
@@ -9,50 +9,50 @@
     "promise",
     "request",
     "then",
-    "thenable"
+    "thenable",
+    "bluebird"
   ],
-  "homepage": "https://github.com/request/request-promise",
+  "main": "./lib/rp.js",
+  "scripts": {
+    "test": "./node_modules/.bin/gulp ci",
+    "test-publish": "./node_modules/.bin/gulp ci-no-cov",
+    "publish-please": "publish-please",
+    "prepublish": "publish-please guard"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/request/request-promise.git"
+  },
+  "author": "Nicolai Kamenzky (https://github.com/analog-nico)",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/request/request-promise/issues"
   },
-  "license": "MIT",
-  "author": "Ty Abonil",
-  "contributors": [
-    "Nicolai Kamenzky (https://github.com/analog-nico)"
-  ],
-  "main": "./lib/rp.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/request/request-promise.git"
-  },
-  "scripts": {
-    "test": "./node_modules/.bin/gulp ci"
+  "homepage": "https://github.com/request/request-promise#readme",
+  "engines": {
+    "node": ">=0.10.0"
   },
   "dependencies": {
-    "bluebird": "^3.3",
-    "lodash": "^4.6.1",
+    "@request/promise-core": "^1.0.0-rc.1",
+    "bluebird": "^3.4.1",
+    "stealthy-require": "^0.1.0"
+  },
+  "peerDependencies": {
     "request": "^2.34"
   },
   "devDependencies": {
-    "body-parser": "1.15.x",
-    "chai": "3.5.x",
-    "chai-as-promised": "5.2.x",
-    "chalk": "1.1.x",
-    "cheerio": "0.20.x",
-    "cls-bluebird": "^1.0.1",
-    "continuation-local-storage": "^3.1.4",
-    "event-stream": "3.3.x",
-    "gulp": "3.9.x",
-    "gulp-coveralls": "0.1.x",
-    "gulp-istanbul": "0.10.x",
-    "gulp-jshint": "2.0.x",
-    "gulp-mocha": "2.2.x",
-    "jshint": "2.9.x",
-    "jshint-stylish": "2.1.x",
-    "rimraf": "2.5.x",
-    "run-sequence": "1.1.x"
-  },
-  "engines": {
-    "node": ">=0.10.0"
+    "body-parser": "~1.15.2",
+    "chai": "~3.5.0",
+    "chalk": "~1.1.3",
+    "gulp": "~3.9.1",
+    "gulp-coveralls": "~0.1.4",
+    "gulp-eslint": "~2.1.0",
+    "gulp-istanbul": "~1.0.0",
+    "gulp-mocha": "~2.2.0",
+    "lodash": "~4.13.1",
+    "publish-please": "~2.1.4",
+    "request": "^2.34.0",
+    "rimraf": "~2.5.3",
+    "run-sequence": "~1.2.2"
   }
 }
