--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "node": ">=0.10.0"
   },
   "dependencies": {
-    "@request/promise-core": "^1.0.0-rc.1",
+    "@request/promise-core": "^1.0.0",
     "bluebird": "^3.4.1",
     "stealthy-require": "^0.1.0"
   },
