--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   "dependencies": {
     "request-promise-core": "1.1.1",
     "bluebird": "^3.5.0",
-    "stealthy-require": "^1.1.0"
+    "stealthy-require": "^1.1.0",
+    "tough-cookie": ">=0.12.0"
   },
   "peerDependencies": {
     "request": "^2.34"
