--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,18 @@
 language: node_js
 sudo: false
 
-node_js:
-  - "0.10"
-  - "0.12"
-  - "iojs"
-  - "4"
-  - "6"
+matrix:
+  include:
+  - node_js: "0.10"
+    env: V_REQUEST=2.76.0
+  - node_js: "0.12"
+    env: V_REQUEST=2.76.0
+  - node_js: "iojs"
+    env: V_REQUEST=2.76.0
+  - node_js: "4"
+    env: V_REQUEST=latest
+  - node_js: "6"
+    env: V_REQUEST=latest
+
+before_install:
+  - npm install request@V_REQUEST
