--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   test:
     docker:
-      - image: circleci/node:latest
+      - image: circleci/node:11.5.0
     working_directory: ~/repo
     steps:
       - checkout
@@ -20,7 +20,7 @@ jobs:
 
   release:
     docker:
-      - image: circleci/node:latest
+      - image: circleci/node:11.5.0
     steps:
       - checkout
       - restore_cache:
