chore: remove publish-please guard

--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "scripts": {
     "test": "./node_modules/.bin/gulp ci",
     "test-publish": "./node_modules/.bin/gulp ci-no-cov",
-    "publish-please": "publish-please",
-    "prepublish": "publish-please guard"
+    "publish-please": "publish-please"
   },
   "repository": {
     "type": "git",
