--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "request-promise-core": "1.1.3",
     "bluebird": "^3.5.0",
     "stealthy-require": "^1.1.1",
-    "tough-cookie": "^2.3.3"
+    "tough-cookie": "^4.1.3"
   },
   "peerDependencies": {
-    "@cypress/request": "^2.34"
+    "@cypress/request": "^2.88"
   },
   "devDependencies": {
     "body-parser": "~1.15.2",
@@ -51,8 +51,11 @@
     "gulp-mocha": "~2.2.0",
     "lodash": "~4.13.1",
     "publish-please": "~2.1.4",
-    "@cypress/request": "^2.34.0",
+    "@cypress/request": "^2.88",
     "rimraf": "~2.5.3",
     "run-sequence": "~1.2.2"
+  },
+  "resolutions": {
+    "chalk":  "~1.1.3"
   }
 }
